--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a:hover {
 }
 
 #btn-container {
-    margin-bottom: 3rem
+    margin-bottom: 3rem;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
@@ -44,7 +44,7 @@ a:hover {
     margin-bottom: 1.5rem;
 }
 
-#export {
+#export-csv-link {
     display: none;
 }
 
